# pyquantity

./: .gitignore  LICENSE  Makefile  README.md  example_advanced_usage.py  example_grocery_shopping.py  example_usage.py  generate_coverage_badge.py  pyproject.toml  pytest_alias.sh  setup.py  test_ci_locally.sh  test_ruff.toml  test_with_coverage.py
.github/workflows/: ci.yml  pages.yml  python-matrix.yml  release.yml
docs/: conf.py  requirements.txt
docs/_build/html/: .buildinfo  advanced_features.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  usage_guide.html
docs/_build/html/.doctrees/: advanced_features.doctree  environment.pickle  index.doctree  usage_guide.doctree
docs/_build/html/_sources/: usage_guide.md.txt
docs/source/: advanced_features.md  conf.py  homepage.md  index.rst  usage_guide.md
docs/source/_static/: custom.css
src/pyquantity/: __init__.py  context.py  core.py  parser.py
tests/: test_context.py  test_core.py  test_core_deep_coverage.py  test_core_final_coverage.py  test_edge_cases.py  test_parser.py
